fix: mozila firefox backface-visibility issue

--- a/styles.css
+++ b/styles.css
@@ -110,6 +110,7 @@ p {
     width: 100%;
     height: 100%;
     -webkit-backface-visibility: hidden;
+    transform: rotateX(0deg);
     backface-visibility: hidden;
 }
 
